--- a/code/pom.xml
+++ b/code/pom.xml
@@ -60,7 +60,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-search-orm</artifactId>
-            <version>4.5.1.Final</version>
+            <version>5.10.3.FINAL</version>
         </dependency>
 
         <!-- Optional: to use JPA 2.1 -->
