DRAFT! Add JSON getter for creation team

--- a/code/pom.xml
+++ b/code/pom.xml
@@ -60,7 +60,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-search-orm</artifactId>
-            <version>5.10.3.FINAL</version>
+            <version>5.10.3.Final</version>
         </dependency>
 
         <!-- Optional: to use JPA 2.1 -->
@@ -77,6 +77,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.vaadin.external.google</groupId>
+            <artifactId>android-json</artifactId>
+            <version>RELEASE</version>
         </dependency>
     </dependencies>
 
