--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,32 +1,10 @@
-image: greup2.pirod.nl:5000/raptor/gradle-jdk:jdk8
-
 stages:
- - build
- - test
- - deploy
+    - build
 
-before_script:
- - export GRADLE_USER_HOME=`pwd`/.gradle
-
-cache:
-  paths:
-    - .gradle/wrapper
-    - .gradle/caches
-
-build:
+release:
   stage: build
+  only:
+    - release
   script:
-    - gradle assemble
-
-test:
-  stage: test
-  script:
-    - gradle check
-       
-deploy:
-  stage: deploy
-  script:
-    - gradle dockerPushImage
-
-after_script:
-  - echo "End CI"
+    - ./gradlew assembleRelease
+    # Here I need to use the value of versionName in my gradle file.
