--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,11 +24,11 @@ before_script:
 build:
   stage: build
   script:
-    - allocation/gradlew -g /gradle/.gradle clean assemble
+    - gradle build
   allow_failure: false
 
 # Use the generated build output to run the tests.
 test:
   stage: test
   script:
-    - allocation/gradlew -g /.gradle check
+    - gradle test
