--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,22 +13,16 @@ image: java:8
 before_script:
     - chmod +x allocation/gradlew
 
-# We redirect the gradle user home using -g so that it caches the
-# wrapper and dependencies.
-# https://docs.gradle.org/current/userguide/gradle_command_line.html
-#
-# Unfortunately it also caches the build output so
-# cleaning removes reminants of any cached builds.
-# The assemble task actually builds the project.
-# If it fails here, the tests can't run.
+cache:
+  paths:
+     - allocation/gradle/wrapper
+
 build:
   stage: build
   script:
-    - gradle build
-  allow_failure: false
+     - allocation/gradlew assemble
 
-# Use the generated build output to run the tests.
 test:
   stage: test
   script:
-    - gradle test
+     - allocation/gradlew check
