--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,23 +6,12 @@
 # https://github.com/gradle/gradle
 image: java:8
 
-# Make the gradle wrapper executable. This essentially downloads a copy of
-# Gradle to build the project with.
-# https://docs.gradle.org/current/userguide/gradle_wrapper.html
-# It is expected that any modern gradle project has a wrapper
-before_script:
-    - chmod +x allocation/gradlew
-
-cache:
-  paths:
-     - allocation/gradle/wrapper
-
 build:
   stage: build
   script:
-     - allocation/gradlew assemble
+     - gradle build
 
 test:
   stage: test
   script:
-     - allocation/gradlew check
+     - gradle check
