--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,8 @@
+tasks.withType(Test) {
+    scanForTestClasses = false
+    include "**/*Test.class" // whatever Ant pattern matches your test class files
+}
+
 buildscript {
     ext {
         springBootVersion = '2.0.4.RELEASE'
