Switched to MongoDB (JPA mappings were causing problems with JSON creation from POJOs), updated Project model to reflect actual domain, using DataLoader class to seed data into the database

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,3 @@
-tasks.withType(Test) {
-    scanForTestClasses = false
-    include "**/*Test.class" // whatever Ant pattern matches your test class files
-}
 
 buildscript {
     ext {
@@ -13,6 +9,11 @@ buildscript {
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
     }
+}
+
+tasks.withType(Test) {
+    scanForTestClasses = false
+    include "**/*Test.class" // whatever Ant pattern matches your test class files
 }
 
 apply plugin: 'java'
@@ -30,9 +31,11 @@ repositories {
 
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.springframework.boot:spring-boot-starter-data-mongodb')
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     compile('org.springframework.boot:spring-boot-starter-web')
-    runtime('com.h2database:h2')
+    testCompile group: 'de.flapdoodle.embed', name: 'de.flapdoodle.embed.mongo', version: '2.1.1'
+    compile group: 'cz.jirutka.spring', name: 'embedmongo-spring', version: '1.3.1'
+    compileOnly('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
