--- a/build.gradle
+++ b/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     testCompile group: 'de.flapdoodle.embed', name: 'de.flapdoodle.embed.mongo', version: '2.1.1'
     compile group: 'cz.jirutka.spring', name: 'embedmongo-spring', version: '1.3.1'
     compileOnly('org.projectlombok:lombok')
+    compile group: 'com.google.guava', name: 'guava', version: '11.0.2'
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
