--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "inception/frontend-allocation"]
-    path = inception/frontend-allocation
+[submodule "frontend-allocation"]
+    path = frontend-allocation
     url = https://git.infotech.monash.edu/FIT3170-2018/ShotgunSurgery/inception.git
