Added authentication and authorization

--- a/src/main/frontend-allocation/package.json
+++ b/src/main/frontend-allocation/package.json
@@ -27,7 +27,9 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "angular-sortablejs": "^2.6.0",
+    "angularfire2": "^5.0.2",
     "core-js": "^2.5.4",
+    "firebase": "^5.5.4",
     "ngx-pagination": "^3.2.0",
     "rxjs": "^6.0.0",
     "sortablejs": "^1.7.0",
